--- a/src/clipboard/index.html
+++ b/src/clipboard/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Scrapbox Copy Tweets</title>
+    <title>Scrapbox Quote Tweets</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
